:sparkles: Meilleure prise en compte des joueurs retardataires pour qu'ils soient répartis de manière homonogène dans les parties + ajout du pseudonyme des joueurs dans les objets